// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioSet /> should render a radio Button Set 1`] = `
<styled.div
  orientation="vertical"
>
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-0"
    isButton={true}
    isChecked={false}
    key="radio-input-set-0"
    label="123123"
    name="radio-input-set"
    spacing="normal"
    value="option 1"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-1"
    isButton={true}
    isChecked={false}
    isDisabled={true}
    key="radio-input-set-1"
    label="this is option 2 (I am disabled)"
    name="radio-input-set"
    spacing="normal"
    value="option 2"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-2"
    isButton={true}
    isChecked={false}
    key="radio-input-set-2"
    label="this is option 3"
    name="radio-input-set"
    spacing="normal"
    value="option 3"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-3"
    isButton={true}
    isChecked={false}
    key="radio-input-set-3"
    label="this is option 4"
    name="radio-input-set"
    spacing="normal"
    value="option 4"
  />
</styled.div>
`;

exports[`<RadioSet /> should render a radio Set 1`] = `
<styled.div
  orientation="vertical"
>
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-0"
    isButton={false}
    isChecked={false}
    key="radio-input-set-0"
    label="123123"
    name="radio-input-set"
    spacing="normal"
    value="option 1"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-1"
    isButton={false}
    isChecked={false}
    isDisabled={true}
    key="radio-input-set-1"
    label="this is option 2 (I am disabled)"
    name="radio-input-set"
    spacing="normal"
    value="option 2"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-2"
    isButton={false}
    isChecked={false}
    key="radio-input-set-2"
    label="this is option 3"
    name="radio-input-set"
    spacing="normal"
    value="option 3"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-3"
    isButton={false}
    isChecked={false}
    key="radio-input-set-3"
    label="this is option 4"
    name="radio-input-set"
    spacing="normal"
    value="option 4"
  />
</styled.div>
`;

exports[`<RadioSet /> should render a radio Set with a tight spacing 1`] = `
<styled.div
  orientation="vertical"
>
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-0"
    isButton={false}
    isChecked={false}
    key="radio-input-set-0"
    label="123123"
    name="radio-input-set"
    spacing="tight"
    value="option 1"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-1"
    isButton={false}
    isChecked={false}
    isDisabled={true}
    key="radio-input-set-1"
    label="this is option 2 (I am disabled)"
    name="radio-input-set"
    spacing="tight"
    value="option 2"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-2"
    isButton={false}
    isChecked={false}
    key="radio-input-set-2"
    label="this is option 3"
    name="radio-input-set"
    spacing="tight"
    value="option 3"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-3"
    isButton={false}
    isChecked={false}
    key="radio-input-set-3"
    label="this is option 4"
    name="radio-input-set"
    spacing="tight"
    value="option 4"
  />
</styled.div>
`;

exports[`<RadioSet /> should render a radio set with horizontal buttons 1`] = `
<styled.div
  orientation="horizontal"
>
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-0"
    isButton={false}
    isChecked={false}
    key="radio-input-set-0"
    label="123123"
    name="radio-input-set"
    spacing="normal"
    value="option 1"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-1"
    isButton={false}
    isChecked={false}
    isDisabled={true}
    key="radio-input-set-1"
    label="this is option 2 (I am disabled)"
    name="radio-input-set"
    spacing="normal"
    value="option 2"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-2"
    isButton={false}
    isChecked={false}
    key="radio-input-set-2"
    label="this is option 3"
    name="radio-input-set"
    spacing="normal"
    value="option 3"
  />
  <Styled(RadioInput)
    handleChange={[Function]}
    id="radio-input-set-3"
    isButton={false}
    isChecked={false}
    key="radio-input-set-3"
    label="this is option 4"
    name="radio-input-set"
    spacing="normal"
    value="option 4"
  />
</styled.div>
`;
